creating the feature of quiz builder for the instructors
